# KFU_OIT_system

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose-filesystem.yml  docker-compose-prod.yml  docker-compose.yml
ticketing-system/: Cargo.toml  Dockerfile  README.md
ticketing-system/.sqlx/: query-0252e610a867380f4ff2a8d7f6fe4c53c40dca516a31f2b6742907df6307c13a.json  query-03e8a7d08018ff5f57f47cc0013427f46727c819279c864b3f10ec39062f736e.json  query-067279bbe8d95104bc59653117617ba4f92b7ff21049c627c47570ca85647b6f.json  query-06919c0a7b1f16dbf26936013c07f53c6ca70076d94e2ac92f23583e22a9e9ff.json  query-0db45b1caf18a8591314cf26e8b709e4dc29d9082ff00235c82413a82c44bbb8.json  query-180013e58be39f93e06a3de22e79b5b8b5c562639e0d380a0f73923f9ba8df71.json  query-1aa33710c365af0c0319b40a4a2a2bbeb67d73edb9eb02ebfbf70cbe39ff5a46.json  query-1d0833d61600ced222c3dd10d50a2b6e96eb0467d6a26c1701bb1cf7e2b8df4e.json  query-1d3aa424daaca5daa55898c09e81fbbab5f970bd43fa534bd69bac2942540e1e.json  query-217aa8dcb99d708e76ae3ee9ce2c3076f3b17aec65dc45e23acc4d08bfee9130.json  query-23c29d78d557934ee3380519aea55c048a18149a4edc635e1ee9430c150a50e9.json  query-2434c4715bebc2b587210985dc726e3ec6fe0eca2ae25e5ef061a52767c3887e.json  query-25b9d44bc388f8403076f0dbf57227b1ecd0f9cb6d739e33822b9daa7dd1e6dd.json  query-28990459d7d009d0b5b522fddb366186c13be4913c4917acf337b6d8f702c0f8.json  query-28f7bf9c05ae3b1b419a24b67015138c2c79507131a972b5eb1d75be1b53b4a8.json  query-2cd90afbc86cd5984ac82c47f1be101d5ea4a9d82dc8f5bcbc9a86f8def12833.json  query-2d1168c4910574f39643836a558545a85d341bfefa2a9835b7dba68ab509589a.json  query-2e990fd4e731934c2dab601c4799c511dc7fd96f63d9451ce5c0f5f8d02e4648.json  query-352ebd5143f69bf9e6b392a6557793ed98ee08e16bcfe9c9964336f7726d0489.json  query-3ad0b3e38774d2869aa58554d67b1c8007fef5eecd21db7860772a94b98a1f48.json  query-3c68d2712e90f46f4f31c1acf70a4b8d6abf427eeee1ed762254330e6be8b3bb.json  query-3c9a767d61762c3516c8863ecbd3d6bb2fd5bf630faa7afc24fae790cbc330b5.json  query-4551e26869e5cd24655b977d642152b09f8ea29fe7642e3d3aca8a004c1600ca.json  query-45b7aa575369b23c03f124e4b419f2c049e86a799851d115049ee5124479feb5.json  query-4625ac63b5bce84247c1daf5efcf479c382e47540c53cadba1462fff5279d5cf.json  query-47be006463ca5d294cc37f2330a34db879191ba7bce3420add4331f081efbfab.json  query-4953d2a7f23d8acb14b244d31f1c244de943d60c782c24633d6725c357d1b35d.json  query-4b74628adcfcdefdb25ce20cd788e4798170d2f2f789a66f071efb4172d6d0c7.json  query-4ba9b24169baf8c3abaf9f3f283193d0066989034bc4bfb0ee2bd0ce2c77a016.json  query-4cf4ec5fd5dffb7c6e705a7081d6a46e1e3488b60fb9b57821ff7469f4ab2103.json  query-4e2be1eb401973e2f8eba7119a3dba8b479b45fd7856f26ae746311573763a8a.json  query-4e331487adb0db8fef2c6a0778b77aa4ae37705f9aa5af0e516a3c09ac8f638d.json  query-4e5f543595f69088cc5d23814e1a31d3411e50611b6cab6a74074ca34ae00849.json  query-51a0a7da6049283865c73c9345ba15b5f13860f662b4b0c428401116f9a1fc9e.json  query-5432c9db6f83b0531635b0e1f848671328d9feec6672fb04e649d093a9cd25fa.json  query-575c171969d9e1128ad1055d41db360a1f0038007aae7a55ff9edebbc4c63b7b.json  query-58222b7ed098773009af1df9febc2a572271ecd303edb621bf3ec052d4cd03c8.json  query-5ab5dbb603e19c6aa23a560e87f5bd0ec10e18e2d02315af7cfea7cc3d5976a0.json  query-63cf2973045eaeb4b2ed0b5abfa7105175b153c55ccfb3a7aea4ca5ae1554451.json  query-664b40e0b570516bd285b060529afcf46f160c838faea36beb955352a014f63d.json  (+80 more)
ticketing-system/configuration/: base.yaml  local.yaml  production.yaml
ticketing-system/email_templates/: registration_confirm.html
ticketing-system/migrations/: 20250706144038_init.sql  20251002055912_add_user_login.sql  20251010160740_add_user_is_active.sql  20251019201247_add_user_avatar_field.sql  20251020142442_add_pages_table.sql  20251020142506_add_indexes.sql  20251024120658_add_related_pages.sql  20251028100846_add_tags_synonyms.sql  20251107054248_update_user_roles.sql  20251117061829_update_ticket_note_len.sql  20251120065851_add_departments.sql  20251128072426_add_author_and_source_to_tickets.sql  20251209061603_set_default_user_role.sql  20251211095707_add_ticket_messages.sql  20251219170012_add_system_notifications.sql  20251224102822_move_notes_to_internal_messages.sql  20251228102820_add_notifications.sql  20260113203348_store_pages_data_in_table.sql  (+9 more)
www/: .gitignore  (+7 more)
(+502 files in other folders)
