[package]
name = "ticketing-system"
version = "0.1.0"
authors = ["Minnakhmetov Almaz"]
edition = "2024"
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
actix-web = "4.11.0"

config = "0.15.13"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7"
serde_json = "1.0"
serde_qs = { version = "0.15", features = ["actix4"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }

anyhow = "1.0.98"
thiserror = "2.0.12"

tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7"
tokio = { version = "1.46.1", features = ["full"] }
uuid = "1.17.0"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.41"
num_enum = "0.7"
ring = "0.17.14"
hex = "0.4.3"
strum = "0.27.2"
strum_macros = "0.27.2"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
bb8-redis = "0.24.0"