[package]
name = "ticketing-system"
version = "0.1.0"
authors = ["Minnakhmetov Almaz"]
edition = "2024"
license = "MIT"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
actix-web = "4.11.0"
actix-multipart = "0.7.2"

config = "0.15"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.7"
serde_json = "1.0.143"
serde_qs = { version = "0.15", features = ["actix4"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }

anyhow = "1.0"
thiserror = "2.0"

tracing = { version="0.1", features=["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7.19"
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.0"
jsonwebtoken = "9.3.1"
argon2 = "0.5.3"
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.41"
num_enum = "0.7"
ring = "0.17.14"
hex = "0.4.3"
strum = { version = "0.27.2", features = ["derive"] }
async-trait="0.1"
unicode-segmentation = "1.12"
validator = "0.20"
reqwest = { version="0.12", features = ["json", "rustls-tls"] }
rand = "0.9"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
bb8-redis = "0.24.0"

aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.103.0"
bytes = "1.10.1"
tokio-util = "0.7.16"
image = "0.25.6"
webp = "0.3.0"

[dev-dependencies]
claim = "0.5"
fake = "4.4"
proptest = "1.7"
wiremock = "0.6"